--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -25,19 +25,9 @@
 
             <com.hitomi.cmlibrary.CircleMenu
                 android:id="@+id/circle_menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="300dp"
+                android:layout_height="300dp" />
 
-            <Button
-                android:id="@+id/searchButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Search"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintVertical_bias="0.75"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
 
             <Button
                 android:id="@+id/logoutButton"
@@ -45,46 +35,11 @@
                 android:layout_height="wrap_content"
                 android:text="Log out"
                 app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintVertical_bias="0.75"
-                app:layout_constraintBottom_toBottomOf="@id/button_friends"
+                app:layout_constraintVertical_bias="0.9"
+                app:layout_constraintBottom_toBottomOf="@+id/circle_menu"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
-
-            <Button
-                android:id="@+id/button_friends"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:text="Friends"
-                app:layout_constraintBottom_toTopOf="@+id/startExerciseButton"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                />
-
-            <Button
-                android:id="@+id/startExerciseButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/start_exercise"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"/>
-
-            <Button
-                android:id="@+id/exerciseRecordButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/exercise_record"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/startExerciseButton"
-                app:layout_constraintVertical_bias="0.222" />
 
 
 
