--- a/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="#D8D8D8"
+    android:background="@color/Microsoftblue"
     android:id="@+id/exercise_record_main"
     tools:context=".activity.ExerciseRecordActivity">
 
