--- a/MyApplication/app/src/main/res/layout/activity_friend_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_list.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:background="@color/Microsoftblue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageBack">
 
