--- a/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
@@ -5,10 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
+
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activity.FriendProfileActivity">
+    tools:context=".activity.FriendProfileActivity"
+    android:background="@color/Microsoftblue">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_image_view"
