--- a/MyApplication/app/src/main/res/layout/activity_search.xml
+++ b/MyApplication/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="#D8D8D8"
+    android:background="@color/Microsoftblue"
     tools:context=".activity.SearchActivity">
 
 
@@ -65,7 +65,7 @@
         android:id="@+id/viewSupporter"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:background="#D8D8D8"
+        android:background="@color/Microsoftblue"
         app:layout_constraintTop_toBottomOf="@id/searchView" />
 
     <FrameLayout
