--- a/MyApplication/app/src/main/res/layout/user_container.xml
+++ b/MyApplication/app/src/main/res/layout/user_container.xml
@@ -55,6 +55,7 @@
         app:layout_constraintTop_toBottomOf="@id/ViewSupporter" />
 
     <ImageButton
+        android:background="@color/Microsoftblue"
         android:id="@+id/buttonMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
