--- a/MyApplication/app/src/main/res/layout/received_message.xml
+++ b/MyApplication/app/src/main/res/layout/received_message.xml
@@ -7,12 +7,16 @@
     android:layout_marginTop="8dp"
     android:padding="4dp">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageProfile"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/circular"
+        android:src="@drawable/person_icon"
+        android:background="@drawable/circular_bg"
+        android:backgroundTint="@color/my_primary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
