--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,7 @@
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="100dp"
         />
 
@@ -121,9 +122,11 @@
                 />
 
             <ProgressBar
+                android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:visibility="invisible"
                 />
 
         </LinearLayout>
