--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -22,67 +22,90 @@
         android:scaleType="centerCrop"
         android:src="@drawable/person_icon" />
 
-    <TextView
-        android:id="@+id/username"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:hint="Username"
-        android:inputType="text"
-        android:padding="10dp"
-        android:gravity="center"/>
+        android:layout_marginHorizontal="15dp"
+        app:cardBackgroundColor="@color/Grey"
+        android:layout_alignParentBottom="true"
+        app:cardCornerRadius="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
 
-    <TextView
-        android:id="@+id/useremail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:hint="Useremail"
-        android:inputType="text"
-        android:padding="10dp"
-        android:gravity="center"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:padding="28dp"
+            >
 
-    <TextView
-        android:id="@+id/usergender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:hint="Usergender"
-        android:inputType="text"
-        android:padding="10dp"
-        android:gravity="center"/>
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:elevation="5dp"
+                android:hint="Username"
+                android:inputType="text"
+                android:background="@drawable/textview_border"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/userweight"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:hint="Userweight"
-        android:inputType="text"
-        android:padding="10dp"
-        android:gravity="center"/>
+            <TextView
+                android:id="@+id/useremail"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:elevation="5dp"
+                android:hint="Useremail"
+                android:inputType="text"
+                android:background="@drawable/textview_border"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/userheight"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:hint="Userheight"
-        android:inputType="text"
-        android:padding="10dp"
-        android:gravity="center"/>
+            <TextView
+                android:id="@+id/usergender"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:elevation="5dp"
+                android:hint="Usergender"
+                android:inputType="text"
+                android:background="@drawable/textview_border"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
 
-    <Button
-        android:id="@+id/uploadImageButton"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="Upload picture" />
+            <TextView
+                android:id="@+id/userweight"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:elevation="5dp"
+                android:hint="Userweight"
+                android:inputType="text"
+                android:background="@drawable/textview_border"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
 
-    <Button
-        android:id="@+id/uploadInfoButton"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="Update Info" />
+            <TextView
+                android:id="@+id/userheight"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:elevation="5dp"
+                android:hint="Userheight"
+                android:inputType="text"
+                android:background="@drawable/textview_border"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"/>
+
+
+            <Button
+                android:id="@+id/uploadInfoButton"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="Update Info" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
 
 
 </LinearLayout>
