--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -84,5 +84,11 @@
         android:layout_height="wrap_content"
         android:text="Update Info" />
 
+    <!-- Added blacklist button -->
+    <Button
+        android:id="@+id/blacklistButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Blacklist" />
 
 </LinearLayout>
