--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -100,18 +100,15 @@
                 android:id="@+id/uploadInfoButton"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="Update Info" />
+
+            <Button
+                android:id="@+id/blacklistButton"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="Blacklist" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-
-    <!-- Added blacklist button -->
-    <Button
-        android:id="@+id/blacklistButton"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="Blacklist" />
-
 </LinearLayout>
