--- a/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
@@ -11,6 +11,15 @@
     tools:context=".activity.FriendProfileActivity"
     android:background="@color/Microsoftblue">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageBack"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:padding="5dp"
+        android:src="@drawable/icon_back"
+        android:layout_gravity="start|top" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_image_view"
         android:layout_width="160dp"
