--- a/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
@@ -18,13 +18,19 @@
         android:src="@drawable/icon_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/exerciseChart"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"/>
     <LinearLayout
         android:id="@+id/RecordButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/exerciseChart">
 
         <Button
             android:id="@+id/SortByDateButton"
@@ -53,10 +59,6 @@
             android:textColor="@color/black"
             app:cornerRadius="5dp"
             android:text=" Duration" />
-
-
-
-
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
