--- a/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
@@ -18,19 +18,13 @@
         android:src="@drawable/icon_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/exerciseChart"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/white"
-        app:layout_constraintTop_toTopOf="parent"/>
     <LinearLayout
         android:id="@+id/RecordButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseChart">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/SortByDateButton"
@@ -66,6 +60,29 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@id/RecordButtons" />
+        app:layout_constraintTop_toBottomOf="@id/RecordButtons"
+        app:layout_constraintBottom_toTopOf="@+id/chartCard"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/chartCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        app:cardBackgroundColor="@color/Microsoftblue"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/exerciseChart"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/white"
+            />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
