--- a/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
@@ -36,6 +36,7 @@
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:background="#D8D8D8"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/imageBack">
 
         <Button
@@ -44,6 +45,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#9e9694"
             android:textColor="@color/black"
+            android:layout_marginBottom="5dp"
             app:cornerRadius="5dp"
             android:text=" Date"
             android:drawableRight="@drawable/ic_sort_descending"/>
