--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -17,10 +17,11 @@
         android:textStyle="bold"
         android:padding="35dp"
         android:textColor="@color/black"
+        android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="100dp"
+
         />
 
     <androidx.cardview.widget.CardView
