--- a/MyApplication/app/src/main/res/layout/activity_exercise_record_detail.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record_detail.xml
@@ -9,6 +9,16 @@
     android:background="@color/Microsoftblue"
     tools:context=".activity.ExerciseRecordDetailActivity">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageBack"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:padding="5dp"
+        android:src="@drawable/icon_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textViewDate"
         android:layout_width="0dp"
@@ -16,7 +26,7 @@
         android:text="Date"
         android:textSize="18sp"
         android:textColor="@android:color/black"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
